@@ -4,6 +4,11 @@ apt (0.8.16~exp5ubuntu9) UNRELEASEDoneiric; urgency=low
   * apt-pkg/acquire-item.h, apt-pkg/deb/debmetaindex.cc:
     - fix fetching language information by adding OptionalSubIndexTarget
 
+  [ David Kalnischkies ]
+  * apt-pkg/acquire-item.cc:
+    - if no Release.gpg file is found try to verify with hashes,
+      but do not fail if a hash can't be found
+
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 16 Sep 2011 09:16:32 +0200
 
 apt (0.8.16~exp5ubuntu8) oneiric; urgency=low
